feat: add spam or ham dataset for selection

--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-gray-200">
             <h2 class="text-xl font-semibold mb-4">Request Pattern & Routing</h2>
 
+            <label class="block mb-4 text-sm font-medium">Dataset
+                <select id="dataset"
+                        class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
+                    <option value="boolq_validation">BoolQ</option>
+                    <option value="spam_ham_dataset">Spam</option>
+                </select>
+            </label>
+
             <label class="block mb-4 text-sm font-medium">Load Pattern
                 <select id="patternSelect"
                         class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
