feat: add imdb and ag news dataset to datasets

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
                         class="mt-1 w-full px-3 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-blue-500 focus:outline-none">
                     <option value="boolq_validation">BoolQ</option>
                     <option value="spam_ham_dataset">Spam</option>
+                    <option value="imdb_dataset">IMDB</option>
+                    <option value="ag_news_test">AG News</option>
                 </select>
             </label>
 
