feat: add lorem ipsum dataset to selection

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                     <option value="spam_ham_dataset">Spam</option>
                     <option value="imdb_dataset">IMDB</option>
                     <option value="ag_news_test">AG News</option>
+                    <option value="lorem_ipsum_dataset">Lorem ipsum</option>
                 </select>
             </label>
 
